<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_grade"
        android:text="@string/single_grade" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_grades"
        android:text="@string/multiple_grades" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_announcement"
        android:text="@string/single_announcement" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_announcements"
        android:text="@string/multiple_announcements" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_event"
        android:text="@string/single_event" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_events"
        android:text="@string/multiple_events" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_lucky"
        android:text="@string/lucky_number" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/snackbar"
        android:text="@string/snackbar" />
</LinearLayout>